add css and additional html

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
   <!-- Navigation -->
   <nav class="navbar">
     <div class="container">
-      <div class="logo">HBT</div>
+      <div class="logo">
+        <h1><a href="index.html">HBT</a></h1>
+      </div>
       <ul class="nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="index.html" class="current">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -26,7 +28,7 @@
   <!-- Showcase -->
   <header class="showcase">
     <div class="container">
-      <h1>Enjoy Your Stay</h1>
+      <h1><span class="current2">Enjoy </span> Your Stay</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus a veniam, saepe autem ratione nobis!</p>
       <button type="button" class="btn">About Our Hotel</button>
     </div>
@@ -34,38 +36,35 @@
   <!-- /Showcase -->
 
   <!-- Info -->
-  <section class="info">
-    <div class="container">
-      <img src="images/photo-1.jpeg" alt="Info photo" class="info-img">
-      <div class="info-text">
-        <h2>The History of our hotel</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur possimus, excepturi alias sunt consequuntur, omnis et explicabo minima ratione ipsa quas quia. Ipsa pariatur impedit doloribus perferendis officiis libero sed id, numquam cum natus ducimus corporis harum provident eum accusantium illo fugit at! Cupiditate cumque commodi, maxime consectetur quaerat ipsum?</p>
-        <button type="button" class="btn">Read More</button>
-      </div>
-    </div>
+  <section class="info" class="bg-dark">
+        <div class="info-img_div"></div>
+        <div class="info-text">
+          <h2>The History of our hotel</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur possimus, excepturi alias sunt consequuntur, omnis et explicabo minima ratione ipsa quas quia. Ipsa pariatur impedit doloribus perferendis officiis libero sed id, numquam cum natus ducimus corporis harum provident eum accusantium illo fugit at! Cupiditate cumque commodi, maxime consectetur quaerat ipsum?</p>
+          <button type="button" class="btn">Read More</button>
+        </div>
   </section>
   <!-- /Info -->
 
   <!-- Boxes -->
   <section class="boxes">
-    <div class="container">
-      <div class="box">
+      <div class="box bg-light">
         <i class="fa-solid fa-hotel fa-4x"></i>
         <h3>Great Location</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione, culpa?</p>
       </div>
-      <div class="box">
+      <div class="box bg-dark">
         <i class="fa-solid fa-utensils fa-4x"></i>
         <h3>Free Meals</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione, culpa?</p>
       </div>
-      <div class="box">
+      <div class="box bg-light">
         <i class="fa-solid fa-dumbbell fa-4x"></i>
         <h3>Fitness Room</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione, culpa?</p>
       </div>
-    </div>
   </section>
+  <div class="clearfix"></div>
   <!-- /Boxes -->
 
   <!-- Footer -->
